--- a/index.html
+++ b/index.html
@@ -19,13 +19,8 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
-        <script src="js/main.js"></script>
-        <script type="text/javascript" src="js/class/tools_class.js"></script>
         <script type="text/javascript" src="js/class/pixel_class.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
-        <script type="text/javascript" src="js/class/gomme_class.js"></script>
-        <script type="text/javascript">
-            var p = new Pixel(5, 2, 50, '#f00');
-        </script>
+        <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
