--- a/index.html
+++ b/index.html
@@ -16,10 +16,15 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+        <div id="toolbar">
+            <h1>pixel studio</h1>
+        </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
         <script type="text/javascript" src="js/class/pixel_class.js"></script>
+        <script type="text/javascript" src="js/class/tools_class.js"></script>
+        <script type="text/javascript" src="js/class/dot_class.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
     </body>
